--- a/cryptopals/cryptopals/cryptopals.csproj
+++ b/cryptopals/cryptopals/cryptopals.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{412073A4-2AF3-40C6-9D10-1C5A83726674}</ProjectGuid>
+    <ProjectGuid>{659D712F-EE21-483E-8AF8-5B3B139D20BC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>set1</RootNamespace>
-    <AssemblyName>set1</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>cryptopals</RootNamespace>
+    <AssemblyName>cryptopals</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
