--- a/cryptopals/cryptopals/cryptopals.csproj
+++ b/cryptopals/cryptopals/cryptopals.csproj
@@ -46,6 +46,29 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>cryptopals.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,19 +81,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryOperations.cs" />
-    <Compile Include="Decoder.cs" />
+    <Compile Include="Crypto.cs" />
     <Compile Include="Lists.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Set1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Set2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="set1challenge4.txt" />
-    <Content Include="set1challenge6.txt" />
-    <Content Include="set1challenge7.txt" />
-    <Content Include="set1challenge8.txt" />
+    <Content Include="data\set2\10.txt" />
+    <Content Include="data\set1\4.txt" />
+    <Content Include="data\set1\6.txt" />
+    <Content Include="data\set1\7.txt" />
+    <Content Include="data\set1\8.txt" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -84,5 +110,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
